@@ -19,7 +19,9 @@ VP 9.2.0 Changelog
 - add layering of table elements
 - add per-table sound & music volume settings (0..100% scaling of the global VP settings)
 - add easy selection mode if you right-click on an element in the context menu you can select those elements which are stacked under the mouse cursor
-- add drawing order. If you click on an element all elements which are over/under that clicked element are shown in a list box. You can move elements up/down to change the drawing order
+- add drawing order (via 2 modes: Hit and Select), you can move elements up/down in a list to change the drawing order
+  Hit:    If you click on an element all elements which are over/under that clicked element are shown in the list box
+  Select: If you select a bunch of elements, then the selected elements are shown in the list box
 - add reflection option for balls per table. If you enable this option the ball is mirrored on the table. With reflection strength you can define how much the ball will reflect. 
   If the value is too high the mirror effect will look odd.
 - add shadow orientation. In the table options under Lightsources you can change the shadow orientation by adding a factor to X and Y. Doing that you can change the projection of the shadow on the table.
